--- a/main.tex
+++ b/main.tex
@@ -1134,7 +1134,7 @@ $$d=\sqrt{(x-x_0)^2 + (y-y_0)^2 + (z-z_0)^2}$$
     \item Paraboloid -- 2 parabolas, 1 ellipse$^2$; $\frac{x^2}{a^2}+\frac{y^2}{b^2}=\frac{z}{c}$
     \item Hyperboloid of one sheet$^1$ -- 1 ellipse, 2 hyperbolas; $\frac{x^2}{a^2}+\frac{y^2}{b^2}-\frac{z^2}{c^2}=1$
     \item Hyerpboloid of two sheets$^1$ -- 1 ellipse$^2$, 2 hyperbolas; $\frac{z^2}{c^2}-\frac{x^2}{a^2}-\frac{y^2}{b^2}=1$
-    \item Elliptical Cone -- 1 ellipse$^2$, 2 lines that cross
+    \item Elliptical Cone -- 1 ellipse$^2$, 2 lines that cross; $\frac{x^2}{a^2}+\frac{y^2}{b^2}=\frac{z^2}{c^2}$
     \item Cylinder -- Either 1 parabola, ellipse, or hyperbola.
 \end{enumerate}
 $^1$ One sheet has differing hyperbolic transverse axis while two sheets has the same
@@ -1145,7 +1145,7 @@ $^2$ non-zero value will need to be plugged in
 For each of the three variables, plug in $0$ for two and solve for the remaining.
 
 \section{Parametric Equations}
-$$x=f(t) \& y=g(t)$$
+$$x=f(t), y=g(t)$$
 \begin{itemize}
     \item Each $t$ value gives a point on the curve: $(f(t),g(t))$. 
     \item Circle goes clockwise if $x$ is with $\sin$ or $y$ with $\cos$. 
@@ -1191,12 +1191,86 @@ $$\frac{d^2y}{dx^2} = \frac{\frac{d}{dt}\left(\frac{dy}{dx}\right)}{\frac{dx}{dt
 $$A=\int_a^b f(x) \ dx = \int_a^b y(t) \cdot \frac{dx}{dt} \cdot dx$$
 
 \subsection{Parametric Arc Length}
-$$s=\int_a^b = \sqrt{1+\left(\frac{dy}{dx}\right)^2}\ dx$$
+$$s=\int_a^b \sqrt{x' + y'}\ dt$$
 
 \subsection{Parametric Surface Area}
-$$SA = \int_a^b  2\pi \cdot y(t) \cdot \sqrt{1+\left(\frac{dy}{dx}\right)^2}\ dx$$
+$$SA = \int_a^b  2\pi \cdot y(t) \sqrt{x' + y'}\ dt$$
+
+\section{Polar Coordinates}
+\subsection{Converting}
 
 
+\begin{minipage}{0.5\textwidth}
+Polar to Cartesian
+\begin{itemize}
+    \item $x=r\cdot\cos\theta$
+    \item $y=r\cdot\sin\theta$
+\end{itemize}
 
+\end{minipage}
+\begin{minipage}{0.45\textwidth}
+\begin{tabular}{|p{\textwidth}}
+
+Cartesian to Polar
+\begin{itemize}
+    \item $r^2=x^2+y^2$
+    \item $\theta=\tan^{-1}\left(\frac{y}{x}\right)$
+\end{itemize}
+\end{tabular}
+\end{minipage}
+
+\subsection{Conics in Polar}
+$$r=\frac{l}{1\pm e \cos\theta}$$ where $l$ is the size factor and $e$ is the eccentricity.
+
+\begin{itemize}
+    \item $e=0$: Circle
+    \item $0<e<1$: Ellipse
+    \item $e=1$: Parabola
+    \item $e>1$: Hyperbola
+\end{itemize}
+
+\subsection{Area}
+$$\int_0^{2\pi} \frac{1}{2} \cdot (r(\theta))^2 \ d\theta$$
+
+
+%% Extra Stuff
+
+\section{Vectors}
+\subsection{Scalar Multiple}
+Give $\vec{v}$ and scalar $r$; 
+$$r\vec{v}\ =\ <rx, ry>\ =\ r\cdot||\vec{v}||$$
+
+\subsection{Unit Vector}
+Vector of magnitude 1, such as $\hat{i}, \hat{j}, \hat{k}$
+
+\subsection{Direction Vector}
+A unit vector in some given direction found by dividing a vector $\vec{v}$ by it's magnitude
+
+\subsection{Dot Product}
+$$<a,b,c> \bullet <d,e,f> = ad + be + cf$$
+$$\vec{a} \bullet \vec{b} = ||\vec{a}||\cdot ||\vec{b}|| \cdot \cos\theta$$
+
+\begin{itemize}
+    \item Tells us how similar two vectors are
+\end{itemize}
+
+\subsection{Cross Product}
+$$<a_1, a_2, a_3> \times <b_1, b_2, b_3>\ =\ \begin{bmatrix}
+\vec{i} & \vec{j} & \vec{k}\\
+a_1 & b_2 & a_3\\
+b_1 & b_2 & b_3
+\end{bmatrix}_{\text{determinant}}$$
+
+$$\ <a_2b_3 - a_3b_2,\ a_3b_1-a_1b_3,\ a_1b_2-a_2b_1>$$
+
+\noindent Note that the cross product is not commutative
+$$\vec{u} \times \vec{v} = -(\vec{v} \times \vec{u})$$
+
+
+\subsection{Projection}
+
+%$$\vec{a}\text{ on }\vec{b}\ = \text{scalar}_{\vec{b}}\vec{a} = \frac{\vec{a} \bullet \vec{b}}{||\vec{b}||}$$
+
+$$\vec{a}\text{ on }\vec{b}\ = \text{projection}_{\vec{b}}\vec{a} = \frac{\vec{a} \bullet \vec{b}}{||\vec{b}||} \cdot \frac{\vec{b}}{||\vec{b}||}$$
 
 \end{document}
